ros2_ws/log/build_2025-02-10_18-52-53/object_detection_package/stderr.log
  File "/home/david-wang/Desktop/Projects/Wisconsin Robotics/ros2_ws/install/object_detection_package/lib/python3.12/site-packages/object_detection_package/yolo_detection.py", line 14
    from .models import model.pt
                             ^
SyntaxError: invalid syntax

